--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ $(function(){
 		<h1>飞机大战</h1>
 	</div>
 	<div data-role="main" id="planePanel" style="position: relative; overflow: hidden;">
-		<img style="position: absolute;" id="hero" src="http://m.qpic.cn/psc?/V54FgmPG3pUQBJ27ITUz32tTUB0NlHne/ruAMsa53pVQWN7FLK88i5tymjZT3Y.gYbwlGwLFHMOPOTTaNlUa6c832svvTg1hssrKXacYyimiSsZehNvwjruUKLF3c5KiDOV5gXFyYbI8!/b&bo=YQB8AAAAAAADBz8!&rf=viewer_4"/>
+		<img style="position: absolute;" id="hero" src="images/hero0.png"/>
 	</div>
 </div>
 <!-- Flappy Bird -->
