--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ $(function(){
 		// 设置背景图片和尺寸
 		$("#planePanel").css("width", clientWidth + "px")
 				.css("height", clientHeight - 45 + "px")
-				.css("background-image", "url(background.png)");
+				.css("background-image", "url(images/background.png)");
 		// 让飞机根据手指移动
 		$("#planePanel").on("mouseover", function(e) {
 			let x = e.originalEvent.changedTouches[0].pageX;
