--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ $(function(){
 				.css("background-image", "url(images/background.png)");
 		// 让飞机根据手指移动
 		$("#planePanel").on("mouseover", function(e) {
-			let x = e.originalEvent.changedTouches[0].pageX;
-			let y = e.originalEvent.changedTouches[0].pageY;
+			let x = e.pageX;
+			let y = e.pageY;
 			$("#hero").css("left", x-50 + "px").css("top", y-120 + "px");
 		});
 		$("#planePanel").on("click", function(){
