--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ $(function(){
 			gameObj.start();
 		});
 		$("#planePanel").on("mouseout", function(){
-			gameObj.stop();
+			//gameObj.stop();
 		});
 		$("#planeback").on("click", clearPanel);
 		function clearPanel(){
