--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ $(function(){
 				.css("height", clientHeight - 45 + "px")
 				.css("background-image", "url(images/background.png)");
 		// 让飞机根据手指移动
-		$("body").on("mouseover", function(e) {
+		$("#hero").on("mouseover", function(e) {
 			let x = e.pageX;
 			let y = e.pageY;
 			$("#hero").css("left", x-50 + "px").css("top", y-120 + "px");
@@ -28,7 +28,7 @@ $(function(){
 			gameObj.start();
 		});
 		$("body").on("mouseout", function(){
-			gameObj.stop();
+			//gameObj.stop();
 		});
 		$("#planeback").on("click", clearPanel);
 		function clearPanel(){
