--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ $(function(){
 				.css("height", clientHeight - 45 + "px")
 				.css("background-image", "url(images/background.png)");
 		// 让飞机根据手指移动
-		$("#hero").on("mouseover", function(e) {
+		$("#hero").on("mousemove", function(e) {
 			let x = e.pageX;
 			let y = e.pageY;
 			$("#hero").css("left", x-50 + "px").css("top", y-120 + "px");
