--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@ $(function(){
 		$("#fugai").css({width: clientWidth+"px", height: clientHeight - 45 + "px"});
 		// 让飞机根据手指移动
 		$("#planePanel").on("mousemove", function(e) {
-			let x = e.pageX;
-			let y = e.pageY;
-			$("#hero").css("left", x-50 + "px").css("top", y-120 + "px");
+			if (status == 1) {
+				let x = e.pageX;
+				let y = e.pageY;
+				$("#hero").css("left", x-50 + "px").css("top", y-120 + "px");
+			}
 		});
-		$("#planePanel").on("mouseover", function(){
-			hero.css({"left":clientWidth/2-50 + "px", "top":clientHeight*2/3+"px"});
-			hero.fadeIn(200);
-			gameObj.start();
+		$("#fugai").on("click", function(){
+			status = 1;
 		});
 		$("#planePanel").on("mouseout", function(){
-			gameObj.stop();
+			status = 2;
 		});
 		$("#planeback").on("click", clearPanel);
 		function clearPanel(){
@@ -46,6 +46,7 @@ $(function(){
 				bullets[i].remove();
 			}
 			bullets = [];
+			status = 3;
 		}
 		let hero = $("#hero");
 		hero.imgs = ["images/hero0.png", "images/hero1.png"];
@@ -181,44 +182,46 @@ $(function(){
 		let gameObj = {};
 		gameObj.timer = null;
 		gameObj.start = function() {// 开始游戏
-			hero.penHuo();
-			enemyFactory.create();
-			bulletFactory.create();
-			if (this.timer) {
-				clearInterval(this.timer);
+			if (status == 1) {
+				hero.penHuo();
+				enemyFactory.create();
+				bulletFactory.create();
+				if (this.timer) {
+					clearInterval(this.timer);
+				}
+				this.timer = setInterval(function() {
+					for (let i in bees) {
+						bees[i].step();
+						let r = bees[i].outOfPanel();
+						if (r) {
+							bees.splice(i, 1);
+							i--;
+						}
+						r = bees[i].isHit();
+						if (r) {
+							bees.splice(i, 1);
+							i--;
+						}
+					}
+					for (let i in airplanes) {
+						airplanes[i].step();
+						let r = airplanes[i].outOfPanel();
+						if (r) {
+							airplanes.splice(i, 1);
+							i--;
+						}
+					}
+					for (let i in bullets) {
+						bullets[i].step();
+						let r = bullets[i].outOfPanel();
+						if (r) {
+							bullets.splice(i, 1);
+							i--;
+						}
+					}
+					hero.isHit();
+				}, 20);
 			}
-			this.timer = setInterval(function() {
-				for (let i in bees) {
-					bees[i].step();
-					let r = bees[i].outOfPanel();
-					if (r) {
-						bees.splice(i, 1);
-						i--;
-					}
-					r = bees[i].isHit();
-					if (r) {
-						bees.splice(i, 1);
-						i--;
-					}
-				}
-				for (let i in airplanes) {
-					airplanes[i].step();
-					let r = airplanes[i].outOfPanel();
-					if (r) {
-						airplanes.splice(i, 1);
-						i--;
-					}
-				}
-				for (let i in bullets) {
-					bullets[i].step();
-					let r = bullets[i].outOfPanel();
-					if (r) {
-						bullets.splice(i, 1);
-						i--;
-					}
-				}
-				hero.isHit();
-			}, 20);
 		};
 		gameObj.stop = function() {
 			hero.stop();
@@ -226,7 +229,7 @@ $(function(){
 			bulletFactory.stop();
 			clearInterval(this.timer);
 		};
-		//gameObj.start();
+		gameObj.start();
 	});
 	
 });
