--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <script src="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 <script>
 $(function(){
-	let clientWidth = document.body.clientWidth;
-	let clientHeight = document.body.clientHeight;
+	const clientWidth = document.body.clientWidth;
+	const clientHeight = document.body.clientHeight;
 });
 </script>
 <script src="js/planefight.js"></script>
