--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div data-role="main" id="planePanel" style="position: relative; overflow: hidden;">
 		<img style="position: absolute;" id="hero" src="images/hero0.png"/>
 		<div id="fugai" style="position: absolute; z-index: 9999;">
-			<img src="images/start.png" style="display: block; margin: 0 auto;"/>
+			<img id="startimg" width="100%" height="100%" src="images/start.png" style="display: block; margin: 0 auto;"/>
 		</div>
 	</div>
 </div>
