--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- 应用首页 -->
 <div data-role="page" id="index">
 	<div data-role="header" >
-		<h1>小六的游戏</h1>
+		<h1>小六的小窝</h1>
 	</div>
 	<div data-role="main" class="ui-content">
 	<h2>游戏列表</h2>
