--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <!-- 应用首页 -->
 <div data-role="page" id="index">
 	<div data-role="header" >
-		<h1>小六的小窝</h1>
+		<h1>Brill Opus</h1>
 	</div>
 	<div data-role="main" class="ui-content">
-	<h2>游戏列表</h2>
-	<ul data-role="listview" data-input="#myFilter" data-inset="true">
+	<h2>应用列表</h2>
+	<ul data-role="listview" data-inset="true">
 		<li><a href="#planefight" data-transition="slide">飞机大战</a></li>
 		<li><a href="#flappy" data-transition="slide">Flappy Bird</a></li>
 	</ul>
